--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       </nav>
     <div class="container-fluid">
         <h1 class="display-1" id='heading'></center>Deepu's Dictionary</h1>
-        <div class="card" style="width: 40rem; align-items: center;" id='container'>
+        <div class="card" style=" align-items: center;" id='container'>
             <img src="dictionary.png" class="card-img-top" alt="Dictionary image" style="height: 7rem; width: 7rem;">
             <div class="card-body">
               <h5 class="card-title" id="title" style="color: white;">Search words here..</h5>
