--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
         </div>
       </nav>
     <div class="container-fluid">
-        <h1 class="display-1" id='heading'></center>Deepu's Dictionary</h1>
+        <h1 class="display-1" id='heading'><center>Deepu's Dictionary</center></h1>
         <div class="card" style=" align-items: center;" id='container'>
             <img src="dictionary.png" class="card-img-top" alt="Dictionary image" style="height: 7rem; width: 7rem;">
-            <div class="card-body">
+            <div class="card-body" style="padding:2%">
               <h5 class="card-title" id="title" style="color: white;">Search words here..</h5>
               <input type="text" class="search-box">
               <p class="card-text" id='content'></p>
