--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
         </div>
       </nav>
     <div class="container-fluid">
-        <h2 class="display-1" id='heading'><center>Deepu's Dictionary</center></h2>
+        <div class="heading"> <h2 class="display-1" id='heading'><center>Deepu's Dictionary</center></h2></div>
+       
         <div class="card" style=" align-items: center;" id='container'>
             <img src="dictionary.png" class="card-img-top" alt="Dictionary image" style="height: 7rem; width: 7rem;">
             <div class="card-body" style="padding:2%">
